Add ROS 1 catkin package type
Add ability to generate catkin packages for ROS 1 with "catkin" option.

--- a/onshape_to_robot/ros_package.yaml
+++ b/onshape_to_robot/ros_package.yaml
@@ -13,7 +13,21 @@ package_types:
         destination: ./package.xml
       - source: view_robot.launch.py.jinja
         destination: ./launch/view_robot.launch.py
-      - source: view_robot.rviz.jinja
+      - source: view_robot.rviz2.jinja
+        destination: ./rviz/view_robot.rviz
+  - name: catkin
+    files:
+      - source: flake8.jinja
+        destination: ./.flake8
+      - source: pyproject.toml.jinja
+        destination: ./pyproject.toml
+      - source: CMakeLists.txt.jinja
+        destination: ./CMakeLists.txt
+      - source: package.xml.jinja
+        destination: ./package.xml
+      - source: view_robot.launch.xml.jinja
+        destination: ./launch/view_robot.launch
+      - source: view_robot.rviz1.jinja
         destination: ./rviz/view_robot.rviz
 
 model_formats:
