--- a/requirements.txt
+++ b/requirements.txt
@@ -10,8 +10,11 @@ numpy
 numpy-stl
 onshape_client
 pybullet
+pytest
 PyYAML
 requests
 sphinx
 sphinx-rtd-theme
+sqlalchemy
+sqlalchemy-utils
 transforms3d
